# dotfiles

./: .p10k.zsh  .zshrc  pyproject.toml
