[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = "Dot files"
authors = ["gkedge <gregwork@kedges.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
